src/aglParser.java
// Generated from agl.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class aglParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, SPACES=61, COMMENT=62, MULTILINE_COMMENT=63, ObjectID=64, ColorID=65, 
		PropertyID=66, ID=67, INTEGER=68, NUMBER=69, STRING=70, BOOLEAN=71, STOP=72, 
		ModelID=73, EnumID=74;
	public static final int
		RULE_program = 0, RULE_point = 1, RULE_vector = 2, RULE_vectorANDpointExpr = 3, 
		RULE_polarcoordinates = 4, RULE_polarangle = 5, RULE_polarlength = 6, 
		RULE_statement = 7, RULE_viewDeclaration = 8, RULE_variableDeclaration = 9, 
		RULE_loopDeclaration = 10, RULE_whileLoop = 11, RULE_objectInstantiation = 12, 
		RULE_objectUpdate = 13, RULE_modelInstantiation = 14, RULE_propertyAssignment = 15, 
		RULE_variableUpdate = 16, RULE_multiplePropertyAssignment = 17, RULE_printStatement = 18, 
		RULE_conditionalStatement = 19, RULE_elseIfClause = 20, RULE_elseClause = 21, 
		RULE_listDeclaration = 22, RULE_listElementAssignment = 23, RULE_listElementAccess = 24, 
		RULE_command = 25, RULE_waitCommand = 26, RULE_closeCommand = 27, RULE_refreshCommand = 28, 
		RULE_moveCommand = 29, RULE_propertyValue = 30, RULE_propertyList = 31, 
		RULE_expression = 32, RULE_primaryExpr = 33, RULE_arithmeticExpr = 34, 
		RULE_booleanExpr = 35, RULE_stringExpr = 36, RULE_comparisonOperator = 37, 
		RULE_type = 38, RULE_scriptDeclaration = 39, RULE_scriptSource = 40, RULE_playCommand = 41, 
		RULE_scriptAssignment = 42, RULE_modelDeclaration = 43, RULE_modelBody = 44, 
		RULE_modelElement = 45, RULE_enumDeclaration = 46, RULE_enumValues = 47, 
		RULE_actionOnEnum = 48, RULE_enumActionBody = 49, RULE_enumCase = 50, 
		RULE_conditionalEnumStatement = 51, RULE_elseIfEnumClause = 52, RULE_elseEnumClause = 53, 
		RULE_propertyEnumAssignment = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "point", "vector", "vectorANDpointExpr", "polarcoordinates", 
			"polarangle", "polarlength", "statement", "viewDeclaration", "variableDeclaration", 
			"loopDeclaration", "whileLoop", "objectInstantiation", "objectUpdate", 
			"modelInstantiation", "propertyAssignment", "variableUpdate", "multiplePropertyAssignment", 
			"printStatement", "conditionalStatement", "elseIfClause", "elseClause", 
			"listDeclaration", "listElementAssignment", "listElementAccess", "command", 
			"waitCommand", "closeCommand", "refreshCommand", "moveCommand", "propertyValue", 
			"propertyList", "expression", "primaryExpr", "arithmeticExpr", "booleanExpr", 
			"stringExpr", "comparisonOperator", "type", "scriptDeclaration", "scriptSource", 
			"playCommand", "scriptAssignment", "modelDeclaration", "modelBody", "modelElement", 
			"enumDeclaration", "enumValues", "actionOnEnum", "enumActionBody", "enumCase", 
			"conditionalEnumStatement", "elseIfEnumClause", "elseEnumClause", "propertyEnumAssignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "':'", "'pi'", "'deg'", "'View'", "'='", "'for'", 
			"'in'", "'..'", "'do'", "'{'", "'}'", "'while'", "'at'", "'with'", "'.'", 
			"'print'", "'if'", "'else if'", "'else'", "'List'", "'<'", "'>'", "'['", 
			"']'", "'wait mouse click'", "'close'", "'refresh'", "'after'", "'ms'", 
			"'move'", "'by'", "'-'", "'*'", "'/'", "'+'", "'NOT'", "'AND'", "'OR'", 
			"'<='", "'>='", "'=='", "'!='", "'Number'", "'Integer'", "'String'", 
			"'Point'", "'Vector'", "'Time'", "'Boolean'", "'Script'", "'load'", "'input'", 
			"'play'", "'::'", "'Model'", "'Enum'", "'action on'", null, null, null, 
			null, null, null, null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SPACES", "COMMENT", "MULTILINE_COMMENT", "ObjectID", "ColorID", 
			"PropertyID", "ID", "INTEGER", "NUMBER", "STRING", "BOOLEAN", "STOP", 
			"ModelID", "EnumID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "agl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public aglParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(aglParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1224979109115494912L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 525L) != 0)) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointContext extends ParserRuleContext {
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public PointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_point; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitPoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointContext point() throws RecognitionException {
		PointContext _localctx = new PointContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_point);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				vector();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VectorContext extends ParserRuleContext {
		public PolarcoordinatesContext polarcoordinates() {
			return getRuleContext(PolarcoordinatesContext.class,0);
		}
		public VectorANDpointExprContext vectorANDpointExpr() {
			return getRuleContext(VectorANDpointExprContext.class,0);
		}
		public VectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterVector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitVector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitVector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VectorContext vector() throws RecognitionException {
		VectorContext _localctx = new VectorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__0);
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(123);
				polarcoordinates();
				}
				break;
			case 2:
				{
				setState(124);
				vectorANDpointExpr();
				}
				break;
			}
			setState(127);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VectorANDpointExprContext extends ParserRuleContext {
		public List<PrimaryExprContext> primaryExpr() {
			return getRuleContexts(PrimaryExprContext.class);
		}
		public PrimaryExprContext primaryExpr(int i) {
			return getRuleContext(PrimaryExprContext.class,i);
		}
		public VectorANDpointExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vectorANDpointExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterVectorANDpointExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitVectorANDpointExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitVectorANDpointExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VectorANDpointExprContext vectorANDpointExpr() throws RecognitionException {
		VectorANDpointExprContext _localctx = new VectorANDpointExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vectorANDpointExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			primaryExpr();
			setState(130);
			match(T__2);
			setState(131);
			primaryExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolarcoordinatesContext extends ParserRuleContext {
		public PolarangleContext polarangle() {
			return getRuleContext(PolarangleContext.class,0);
		}
		public PolarlengthContext polarlength() {
			return getRuleContext(PolarlengthContext.class,0);
		}
		public PolarcoordinatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polarcoordinates; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterPolarcoordinates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitPolarcoordinates(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitPolarcoordinates(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolarcoordinatesContext polarcoordinates() throws RecognitionException {
		PolarcoordinatesContext _localctx = new PolarcoordinatesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_polarcoordinates);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			polarangle();
			setState(134);
			match(T__3);
			setState(135);
			polarlength();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolarangleContext extends ParserRuleContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public PolarangleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polarangle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterPolarangle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitPolarangle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitPolarangle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolarangleContext polarangle() throws RecognitionException {
		PolarangleContext _localctx = new PolarangleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_polarangle);
		int _la;
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				primaryExpr();
				setState(138);
				_la = _input.LA(1);
				if ( !(_la==T__4 || _la==T__5) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolarlengthContext extends ParserRuleContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public PolarlengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polarlength; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterPolarlength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitPolarlength(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitPolarlength(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolarlengthContext polarlength() throws RecognitionException {
		PolarlengthContext _localctx = new PolarlengthContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_polarlength);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				primaryExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ViewDeclarationContext viewDeclaration() {
			return getRuleContext(ViewDeclarationContext.class,0);
		}
		public LoopDeclarationContext loopDeclaration() {
			return getRuleContext(LoopDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ObjectInstantiationContext objectInstantiation() {
			return getRuleContext(ObjectInstantiationContext.class,0);
		}
		public ModelInstantiationContext modelInstantiation() {
			return getRuleContext(ModelInstantiationContext.class,0);
		}
		public PropertyAssignmentContext propertyAssignment() {
			return getRuleContext(PropertyAssignmentContext.class,0);
		}
		public PropertyEnumAssignmentContext propertyEnumAssignment() {
			return getRuleContext(PropertyEnumAssignmentContext.class,0);
		}
		public VariableUpdateContext variableUpdate() {
			return getRuleContext(VariableUpdateContext.class,0);
		}
		public ObjectUpdateContext objectUpdate() {
			return getRuleContext(ObjectUpdateContext.class,0);
		}
		public MultiplePropertyAssignmentContext multiplePropertyAssignment() {
			return getRuleContext(MultiplePropertyAssignmentContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public ConditionalStatementContext conditionalStatement() {
			return getRuleContext(ConditionalStatementContext.class,0);
		}
		public ListDeclarationContext listDeclaration() {
			return getRuleContext(ListDeclarationContext.class,0);
		}
		public ListElementAssignmentContext listElementAssignment() {
			return getRuleContext(ListElementAssignmentContext.class,0);
		}
		public ListElementAccessContext listElementAccess() {
			return getRuleContext(ListElementAccessContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ScriptDeclarationContext scriptDeclaration() {
			return getRuleContext(ScriptDeclarationContext.class,0);
		}
		public PlayCommandContext playCommand() {
			return getRuleContext(PlayCommandContext.class,0);
		}
		public ModelDeclarationContext modelDeclaration() {
			return getRuleContext(ModelDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public ConditionalEnumStatementContext conditionalEnumStatement() {
			return getRuleContext(ConditionalEnumStatementContext.class,0);
		}
		public ActionOnEnumContext actionOnEnum() {
			return getRuleContext(ActionOnEnumContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof aglVisitor ) return ((aglVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				viewDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				loopDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				variableDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				objectInstantiation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				modelInstantiation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(152);
				propertyAssignment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(153);
				propertyEnumAssignment();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(154);
				variableUpdate();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(155);
				objectUpdate();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(156);
				multiplePropertyAssignment();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(157);
				command();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(158);
				printStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(159);
				conditionalStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(160);
				listDeclaration();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(161);
				listElementAssignment();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(162);
				listElementAccess();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(163);
				whileLoop();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(164);
				scriptDeclaration();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(165);
				playCommand();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(166);
				modelDeclaration();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(167);
				enumDeclaration();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(168);
				conditionalEnumStatement();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(169);
				actionOnEnum();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
